# vision-box

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  PHASE10_STATUS.md  PHASE11_STATUS.md  PHASE12_STATUS.md  PHASE13_STATUS.md  PHASE14_STATUS.md  PHASE15_STATUS.md  PHASE16_STATUS.md  PHASE17_STATUS.md  PHASE18_STATUS.md  PHASE19_STATUS.md  PHASE1_STATUS.md  PHASE2_FINAL.md  PHASE2_STATUS.md  PHASE3_STATUS.md  PHASE4_STATUS.md  PHASE5_STATUS.md  PHASE6_STATUS.md  PHASE7_STATUS.md  PHASE8_STATUS.md  PHASE9_STATUS.md  PROJECT_STATUS.md  README.md  REAL_STATUS.md  REQUIREMENTS.md  TODO.md  UI_FIX_STATUS.md  VisionBox.sh
cmake/: VisionBoxConfig.cmake.in
contours/ContourPlugin/: ContourFinderModel.cpp  ContourFinderModel.h  ContourPlugin.cpp  ContourPlugin.h  metadata.json
docs/: BUG_FIX_REPORT.md  BUG_FIX_ROOT_CAUSE.md  DRAG_DROP_NODE_POSITIONING.md  DRAG_DROP_SIGNAL_BASED_POSITIONING.md  ERROR_HANDLING.md  ERROR_HANDLING_REPORT.md  IMAGEGENERATOR_PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_MONITORING_REPORT.md  QT6_UPGRADE_REPORT.md  SERIALIZATION.md  STARTUP_GUIDE.md  WAYLAND_COMPATIBILITY.md  WAYLAND_SUPPORT_ROADMAP.md
plugins/: README.md
plugins/arithmetic/ImageArithmeticPlugin/: BinaryOpModel.cpp  BinaryOpModel.h  ImageArithmeticPlugin.cpp  ImageArithmeticPlugin.h  metadata.json
plugins/color/ColorAdjustmentPlugin/: BrightnessContrastModel.cpp  BrightnessContrastModel.h  ColorAdjustmentPlugin.cpp  ColorAdjustmentPlugin.h  SaturationModel.cpp  SaturationModel.h  metadata.json
plugins/color/ColorSpacePlugin/: ColorSpaceModel.cpp  ColorSpaceModel.h  ColorSpacePlugin.cpp  ColorSpacePlugin.h  metadata.json
plugins/detection/AdvancedDetectionPlugin/: AdvancedDetectionPlugin.cpp  AdvancedDetectionPlugin.h  GrabCutSegmentationModel.cpp  GrabCutSegmentationModel.h  YOLOObjectDetectorModel.cpp  YOLOObjectDetectorModel.h  metadata.json
plugins/detection/ObjectDetectionPlugin/: HOGDetectionModel.cpp  HOGDetectionModel.h  ObjectDetectionPlugin.cpp  ObjectDetectionPlugin.h  metadata.json
plugins/displays/ImageViewerPlugin/: ImageViewerModel.cpp  ImageViewerModel.h  ImageViewerPlugin.cpp  ImageViewerPlugin.h  metadata.json
plugins/enhancement/EnhancementPlugin/: DenoiseModel.cpp  DenoiseModel.h  EnhancementPlugin.cpp  EnhancementPlugin.h  SharpenModel.cpp  SharpenModel.h  metadata.json
plugins/exporters/ExportPlugin/: CMakeLists.txt  DataExporterModel.cpp  DataExporterModel.h  ExportPlugin.cpp  ExportPlugin.h  ImageExporterModel.cpp  ImageExporterModel.h  VideoExporterModel.cpp  VideoExporterModel.h  metadata.json
plugins/face/FaceDetectionPlugin/: FaceDetectionPlugin.cpp  FaceDetectionPlugin.h  HaarFaceDetectionModel.cpp  HaarFaceDetectionModel.h  metadata.json
plugins/features/EdgeDetectionPlugin/: CannyModel.cpp  CannyModel.h  EdgeDetectionPlugin.cpp  EdgeDetectionPlugin.h  LaplacianModel.cpp  LaplacianModel.h  ScharrModel.cpp  ScharrModel.h  SobelModel.cpp  SobelModel.h  metadata.json
plugins/features/FeatureDescriptorsPlugin/: FeatureDescriptorsPlugin.cpp  FeatureDescriptorsPlugin.h  ORBFeatureModel.cpp  ORBFeatureModel.h  metadata.json
plugins/features/FeatureDetectionPlugin/: CornerDetectionModel.cpp  CornerDetectionModel.h  FeatureDetectionPlugin.cpp  FeatureDetectionPlugin.h  metadata.json
plugins/features/FeatureMatchingPlugin/: AKAZEFeaturesModel.cpp  AKAZEFeaturesModel.h  FeatureMatcherModel.cpp  FeatureMatcherModel.h  FeatureMatchingPlugin.cpp  FeatureMatchingPlugin.h  SIFTFeaturesModel.cpp  SIFTFeaturesModel.h  metadata.json
plugins/filters/BasicFilterPlugin/: BasicFilterPlugin.cpp  BasicFilterPlugin.h  BlurModel.cpp  BlurModel.h  ColorConvertModel.cpp  ColorConvertModel.h  MorphologyModel.cpp  MorphologyModel.h  ThresholdModel.cpp  ThresholdModel.h  metadata.json
plugins/histogram/HistogramPlugin/: HistogramEqualizationModel.cpp  HistogramEqualizationModel.h  HistogramPlugin.cpp  HistogramPlugin.h  metadata.json
plugins/matching/TemplateMatchingPlugin/: TemplateMatchingModel.cpp  TemplateMatchingModel.h  TemplateMatchingPlugin.cpp  TemplateMatchingPlugin.h  metadata.json
plugins/ml/MachineLearningPlugin/: DNNInferenceModel.cpp  DNNInferenceModel.h  MachineLearningPlugin.cpp  MachineLearningPlugin.h  ObjectTrackerModel.cpp  ObjectTrackerModel.h  metadata.json
plugins/morphology/AdvancedMorphologyPlugin/: AdvancedMorphologyModel.cpp  AdvancedMorphologyModel.h  AdvancedMorphologyPlugin.cpp  AdvancedMorphologyPlugin.h  metadata.json
plugins/opticalflow/OpticalFlowPlugin/: OpticalFlowModel.cpp  OpticalFlowModel.h  OpticalFlowPlugin.cpp  OpticalFlowPlugin.h  metadata.json
plugins/pyramids/ImagePyramidPlugin/: ImagePyramidModel.cpp  ImagePyramidModel.h  ImagePyramidPlugin.cpp  ImagePyramidPlugin.h  metadata.json
plugins/segmentation/DistanceTransformPlugin/: DistanceTransformModel.cpp  DistanceTransformModel.h  DistanceTransformPlugin.cpp  DistanceTransformPlugin.h  metadata.json
plugins/segmentation/SegmentationPlugin/: KMeansSegmentationModel.cpp  KMeansSegmentationModel.h  SegmentationPlugin.cpp  SegmentationPlugin.h  metadata.json
plugins/segmentation/WatershedSegmentationPlugin/: WatershedSegmentationModel.cpp  WatershedSegmentationModel.h  WatershedSegmentationPlugin.cpp  WatershedSegmentationPlugin.h  metadata.json
plugins/sources/ImageSourcePlugin/: CameraSourceModel.cpp  CameraSourceModel.h  ImageGeneratorModel.cpp  ImageGeneratorModel.h  ImageLoaderModel.cpp  ImageLoaderModel.h  ImageSourcePlugin.cpp  (+4 more)
resources/styles/: default.qss
scripts/: check_format.sh  format_code.sh  run_tidy.sh  setup_git_hooks.sh
src/: main.cpp
src/core/: NodeError.h  PerformanceMonitor.cpp  PerformanceMonitor.h  PluginInterface.h  PluginManager.cpp  PluginManager.h  VisionDataTypes.cpp  VisionDataTypes.h
src/ui/: DataFlowGraphModel.cpp  DataFlowGraphModel.h  MainWindow.cpp  MainWindow.h  NodePalette.cpp  NodePalette.h  NodePaletteTreeWidget.cpp  NodePaletteTreeWidget.h  PerformancePanel.cpp  PerformancePanel.h  VisionBoxGraphicsView.cpp  VisionBoxGraphicsView.h
tests/unit/: DataTypesTest.cpp
(+30 files in other folders)
